minor styling, added confirm to pot bet alert and create an alert to set the blinds

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -52,6 +52,7 @@
       <span col-6 class="bottomDisplay">
         <p text-center class="bottomDisplayText">in the pot</p>
         <p id="primaryNumber">{{pot}}</p>
+        <p text-center id="splitPotText">click to split</p>
       </span>
     </ion-row>
   </ion-grid>
