--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
 
   <ion-grid>
     <ion-row nowrap>
-      <button ion-button col-4 class="topButtons">Blinds</button>
+      <button ion-button col-4 class="topButtons" (click)="setBlinds()">Blinds</button>
       <button ion-button col-4 class="topButtons" (click)="changeHandStatus()">{{handStatus}}</button>
       <button ion-button col-4 class="topButtons" (click)="newHand()">New Hand</button>
     </ion-row>
@@ -36,23 +36,23 @@
       <button ion-button col-4 color="light" round *ngFor="let n of row3" (click)="register(n)">{{n}}</button>
     </ion-row>
     <ion-row nowrap>
-        <button ion-button col-3 class="zeroRow" (click)="clear()">C</button>
+        <button ion-button col-3 class="zeroRow" id="cancel" (click)="clear()"><ion-icon name="close"></ion-icon></button>
         <button ion-button col-3 class="zeroRow" color="light" (click)="register('0')" >0</button>
         <button ion-button col-3 class="zeroRow" color="light" (click)="addDecimal()" >.</button>
-        <button ion-button col-3 class="zeroRow" (click)="solve(true)">=</button>
+        <button ion-button col-3 class="zeroRow" id="add" (click)="solve(true)"><ion-icon name="add"></ion-icon></button>
     </ion-row>
   </ion-grid>
   <ion-grid>
     <ion-row nowrap>
-      <span col-6 class="bottomDisplay">
+      <span col-6 class="bottomDisplay" (click)="changeCurrentBet()">
         <p text-center class="bottomDisplayText">current bet</p>
-        <p id="primaryNumber">{{currentBet}}</p>
+        <p id="primaryNumber">${{currentBet}}</p>
+        <p text-center class="secondaryDisplayText">tap to change</p>
       </span>
-      <!-- <button round ion-button col-4 id="potBetButton" >Pot Bet</button> -->
       <span col-6 class="bottomDisplay">
         <p text-center class="bottomDisplayText">in the pot</p>
-        <p id="primaryNumber">{{pot}}</p>
-        <p text-center id="splitPotText">click to split</p>
+        <p id="primaryNumber">${{pot}}</p>
+        <p text-center class="secondaryDisplayText">tap to split</p>
       </span>
     </ion-row>
   </ion-grid>
