renamed the list page and fixed all the files that refer to its old name. Next step is to get the splits page up and running

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -49,7 +49,7 @@
         <p id="primaryNumber">${{currentBet}}</p>
         <p text-center class="secondaryDisplayText">tap to change</p>
       </span>
-      <span col-6 class="bottomDisplay" (click)="isQualifyingLow()">
+      <span col-6 class="bottomDisplay" (click)="isQualifyingLow(smallBlind, pot)">
         <p text-center class="bottomDisplayText">in the pot</p>
         <p id="primaryNumber">${{pot}}</p>
         <p text-center class="secondaryDisplayText">tap to split</p>
