fixed actionTo function and removed some console logs

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -36,7 +36,7 @@
       <ion-row>
         <button ion-button text-wrap col-12 (click)="addPlayer('player10')" [class.actionOn]="player10A" [class.dealer]="player10D" class="trackerButtons">{{player10Name}} {{player10Bet}}</button>
       </ion-row>
-    </ion-grid>{{playerName}}
+    </ion-grid>
   </ion-content>
 
 
