--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
   <ion-content class="playerTracker">
     <ion-grid class="trackerGrid">
       <ion-row>
-        <button ion-button text-wrap col-12 (click)="editPlayer('player1')" [class.actionOn]="currentAction === 'player1'"  [class.dealer]="currentDealer === 'player1'" id="trackerTopButton"><ul><li>{{player1Name}}</li> <li>{{player1Bet}}</li></ul></button>
+        <button ion-button text-wrap col-12 (click)="editPlayer(player1)" [class.actionOn]="currentAction === 'player1'"  [class.dealer]="currentDealer === 'player1'" id="trackerTopButton"><ul><li>{{player1Name}}</li> <li>{{player1Bet}}</li></ul></button>
       </ion-row>
       <ion-row>
         <button ion-button text-wrap col-12 (click)="editPlayer('player2')" [class.actionOn]="currentAction === 'player2'" [class.dealer]="currentDealer === 'player2'" class="trackerButtons"><ul><li>{{player2Name}}</li> <li>{{player2Bet}}</li></ul></button>
