--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,34 +7,34 @@
   <ion-content class="playerTracker">
     <ion-grid class="trackerGrid">
       <ion-row>
-        <button ion-button text-wrap col-12 (click)="editPlayer(player1)" [class.actionOn]="currentAction === 'player1'"  [class.dealer]="currentDealer === 'player1'" id="trackerTopButton"><ul><li>{{player1Name}}</li> <li>{{player1Bet}}</li></ul></button>
+        <button ion-button text-wrap col-12 (click)="editPlayer(player1)" [class.actionOn]="currentAction === player1"  [class.dealer]="currentDealer === player1" id="trackerTopButton"><ul><li>{{player1Name}}</li> <li>{{player1Bet}}</li></ul></button>
       </ion-row>
       <ion-row>
-        <button ion-button text-wrap col-12 (click)="editPlayer('player2')" [class.actionOn]="currentAction === 'player2'" [class.dealer]="currentDealer === 'player2'" class="trackerButtons"><ul><li>{{player2Name}}</li> <li>{{player2Bet}}</li></ul></button>
+        <button ion-button text-wrap col-12 (click)="editPlayer('player2')" [class.actionOn]="currentAction === player2" [class.dealer]="currentDealer === player2" class="trackerButtons"><ul><li>{{player2Name}}</li> <li>{{player2Bet}}</li></ul></button>
       </ion-row>
       <ion-row>
-        <button ion-button text-wrap col-12 (click)="editPlayer('player3')" [class.actionOn]="currentAction === 'player3'" [class.dealer]="currentDealer === 'player3'" class="trackerButtons"><ul><li>{{player3Name}}</li> <li>{{player3Bet}}</li></ul></button>
+        <button ion-button text-wrap col-12 (click)="editPlayer('player3')" [class.actionOn]="currentAction === player3" [class.dealer]="currentDealer === player3" class="trackerButtons"><ul><li>{{player3Name}}</li> <li>{{player3Bet}}</li></ul></button>
       </ion-row>
       <ion-row>
-        <button ion-button text-wrap col-12 (click)="editPlayer('player4')" [class.actionOn]="currentAction === 'player4'" [class.dealer]="currentDealer === 'player4'" class="trackerButtons"><ul><li>{{player4Name}}</li> <li>{{player4Bet}}</li></ul></button>
+        <button ion-button text-wrap col-12 (click)="editPlayer('player4')" [class.actionOn]="currentAction === player4" [class.dealer]="currentDealer === player4" class="trackerButtons"><ul><li>{{player4Name}}</li> <li>{{player4Bet}}</li></ul></button>
       </ion-row>
       <ion-row>
-        <button ion-button text-wrap col-12 (click)="editPlayer('player5')" [class.actionOn]="currentAction === 'player5'" [class.dealer]="currentDealer === 'player5'" class="trackerButtons"><ul><li>{{player5Name}}</li> <li>{{player5Bet}}</li></ul></button>
+        <button ion-button text-wrap col-12 (click)="editPlayer('player5')" [class.actionOn]="currentAction === player5" [class.dealer]="currentDealer === player5" class="trackerButtons"><ul><li>{{player5Name}}</li> <li>{{player5Bet}}</li></ul></button>
       </ion-row>
       <ion-row>
-        <button ion-button text-wrap col-12 (click)="editPlayer('player6')" [class.actionOn]="currentAction === 'player6'" [class.dealer]="currentDealer === 'player6'" class="trackerButtons"><ul><li>{{player6Name}}</li> <li>{{player6Bet}}</li></ul></button>
+        <button ion-button text-wrap col-12 (click)="editPlayer('player6')" [class.actionOn]="currentAction === player6" [class.dealer]="currentDealer === player6" class="trackerButtons"><ul><li>{{player6Name}}</li> <li>{{player6Bet}}</li></ul></button>
       </ion-row>
       <ion-row>
-        <button ion-button text-wrap col-12 (click)="editPlayer('player7')" [class.actionOn]="currentAction === 'player7'" [class.dealer]="currentDealer === 'player7'" class="trackerButtons"><ul><li>{{player7Name}}</li> <li>{{player7Bet}}</li></ul></button>
+        <button ion-button text-wrap col-12 (click)="editPlayer('player7')" [class.actionOn]="currentAction === player7" [class.dealer]="currentDealer === player7" class="trackerButtons"><ul><li>{{player7Name}}</li> <li>{{player7Bet}}</li></ul></button>
       </ion-row>
       <ion-row>
-        <button ion-button text-wrap col-12 (click)="editPlayer('player8')" [class.actionOn]="currentAction === 'player8'" [class.dealer]="currentDealer === 'player8'" class="trackerButtons"><ul><li>{{player8Name}}</li> <li>{{player8Bet}}</li></ul></button>
+        <button ion-button text-wrap col-12 (click)="editPlayer('player8')" [class.actionOn]="currentAction === player8" [class.dealer]="currentDealer === player8" class="trackerButtons"><ul><li>{{player8Name}}</li> <li>{{player8Bet}}</li></ul></button>
       </ion-row>
       <ion-row>
-        <button ion-button text-wrap col-12 (click)="editPlayer('player9')" [class.actionOn]="currentAction === 'player9'" [class.dealer]="currentDealer === 'player9'" class="trackerButtons"><ul><li>{{player9Name}}</li> <li>{{player9Bet}}</li></ul></button>
+        <button ion-button text-wrap col-12 (click)="editPlayer('player9')" [class.actionOn]="currentAction === player9" [class.dealer]="currentDealer === player9" class="trackerButtons"><ul><li>{{player9Name}}</li> <li>{{player9Bet}}</li></ul></button>
       </ion-row>
       <ion-row>
-        <button ion-button text-wrap col-12 (click)="editPlayer('player10')" [class.actionOn]="currentAction === 'player10'" [class.dealer]="currentDealer === 'player10'" class="trackerButtons"><ul><li>{{player10Name}}</li> <li>{{player10Bet}}</li></ul></button>
+        <button ion-button text-wrap col-12 (click)="editPlayer('player10')" [class.actionOn]="currentAction === player10" [class.dealer]="currentDealer === player10" class="trackerButtons"><ul><li>{{player10Name}}</li> <li>{{player10Bet}}</li></ul></button>
       </ion-row>
     </ion-grid>
   </ion-content>
