I made a lot of changes on the commit before this one but I screwed up and didn't list them. Mainly I got all the betting and hand logic working. On this commit I just cleaned up some console.logs and fixed some terminal errors. This is the last commit before I try to deploy potBetCalculatorPro

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -50,7 +50,7 @@
       </ion-row>
     </ion-grid>
     <div id="handStage">
-      <p id="handStageText" (click)="checkArrays()">{{currentHandStage}}</p>
+      <p id="handStageText" >{{currentHandStage}}</p>
     </div>
     <ion-grid>
       <ion-row nowrap class="callRow">
